--- a/nachos/nachos-3.4/code/test/Makefile
+++ b/nachos/nachos-3.4/code/test/Makefile
@@ -35,7 +35,7 @@ CPP = gcc -E
 INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt shell matmult sort PrintString ReadString PrintChar PrintInt
+all: halt shell matmult sort PrintString ReadString PrintChar PrintInt ascii help
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.c > strt.s
@@ -90,3 +90,14 @@ PrintInt: PrintInt.o start.o
 	$(LD) $(LDFLAGS) start.o PrintInt.o -o PrintInt.coff
 	../bin/coff2noff PrintInt.coff PrintInt
 
+ascii.o: ascii.c
+	$(CC) $(CFLAGS) -c ascii.c
+ascii: ascii.o start.o
+	$(LD) $(LDFLAGS) start.o ascii.o -o ascii.coff
+	../bin/coff2noff ascii.coff ascii
+
+help.o: help.c
+	$(CC) $(CFLAGS) -c help.c
+help: help.o start.o
+	$(LD) $(LDFLAGS) start.o help.o -o help.coff
+	../bin/coff2noff help.coff help
